<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Financial Calculators</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="simple_calculator_desc">A Simple Calculator</string>
    <string name="simple_mortgage">Simple Mortgage Calculator</string>
    <string name="simple_mortgage_desc">Calculate your monthly payment based on location, current mortgage rates and other variables</string>
    <string name="title_tip_calculator">Tip Calculator</string>
    <string name="title_tip_calculator_desc">Helps split your check with the number of folks on the table</string>
    <string name="MainActivityFirstImageDesc">Image View</string>
    <string name="BaseMortgageAmount">Base Price</string>
    <string name="BaseMortgageAmountDesc">Required: Base price of your property</string>
    <string name="DollarsDown">Dollar Down</string>
    <string name="DollarsDownDesc">Optional: 20% set as default, if left empty </string>
    <string name="PercentageDollarsDown">% Down</string>
    <string name="ZipCode">Zip Code</string>
    <string name="ZipCodeDesc">Optional: Helps get most accurate local rates</string>
    <string name="Address">Address</string>
    <string name="MortgageResult">Result</string>
    <string name="empty_string"></string>
    <string name="title_activity_settings">Settings</string>
    <string name="supporting_libraries">Supporting Libraries</string>
    <string name="supporting_libraries_desc">This app uses the following opensource libraries and we thank the contributors for their awesome efforts.</string>
    <string name="zillow_copyRightDesc">Copyright Zillow, Inc., 2006-2014. Use is subject to Terms of Use</string>
    <string name="zillow_error_code_one">Check to see if your url is properly formed: delimiters, character cases, etc.</string>
    <string name="zillow_error_code_two">Check if you have provided a ZWSID in your API call. If yes, check if the ZWSID is keyed in correctly. If it still does not work, contact Zillow to get help with fixing your ZWSID.</string>
    <string name="zillow_error_code_three">The Zillow Web Service is currently not available. Please come back later and try again.</string>
    <string name="zillow_error_code_four">The Zillow Web Service is currently not available. Please come back later and try again.</string>
    <string name="zillow_error_code_fivehundred">Make sure the price parameter is specified and is a valid integer.</string>
    <string name="zillow_error_code_fivehundredone">Make sure the zip parameter is specified and is a valid five digit ZIP code.</string>
    <string name="zillow_error_code_fivehundredtwo">Make sure the down or dollarsdown parameter is specified and is a valid integer or Region specified was not found.</string>
    <string name="zillow_error_code_fivehundredthree">Zillow Mortgage Marketplace rate data is currently unavailable. Please come back later and try again.</string>
    <string name="zillow_error_code_fivehundredfive">Incorrect combination of parameters. When querying by zip code, only include the zip parameter.</string>
    <string name="title_activity_demographics">Find Your Home</string>
    <string name="title_activity_demographics_desc">Helps you find your next house along with affordability, real estate, and other demographic data</string>
    <string name="title_activity_demographics_detail_tabbed">Local Demographics Details</string>
    <string name="title_section1">Region</string>
    <string name="title_section2">Links</string>
    <string name="title_section3">Charts</string>
    <string name="zillow_url_not_present">Link not available from Zillow at this time</string>
    <string name="banner_ad_unit_id">ca-app-pub-0264647149873417/5159776909</string>
    <string name="title_activity_tip_calculator">Tip Calculator</string>
</resources>
