<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MainActivityFirstImageView"
                android:layout_column="1"
                android:clickable="true"
                android:contentDescription="@string/MainActivityFirstImageDesc" />
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/simple_calculator"
                android:id="@+id/MainActivityFirstTextView"
                android:layout_column="2"
                android:clickable="true"
                android:onClick="@string/simple_calculator"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/simple_calculator_desc"
                android:id="@+id/MainActivityFirstTextSubView"
                android:layout_column="2"
                android:clickable="true"
                android:visibility="visible"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MainActivitySecondImageView"
                android:layout_column="1"
                android:clickable="true"
                android:contentDescription="@string/MainActivityFirstImageDesc" />
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/simple_mortgage"
                android:id="@+id/MainActivitySecondTextView"
                android:layout_column="2"
                android:clickable="true"
                android:onClick="@string/simple_mortgage"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/simple_mortgage_desc"
                android:id="@+id/MainActivitySecondTextSubView"
                android:layout_column="2"
                android:clickable="true"
                android:visibility="visible"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MainActivityThirdImageView"
                android:layout_column="1"
                android:clickable="true"
                android:contentDescription="@string/title_activity_demographics_desc" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_activity_demographics"
                android:id="@+id/MainActivityThirdTextView"
                android:layout_column="2"
                android:clickable="true"
                android:onClick="@string/title_activity_demographics"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_activity_demographics_desc"
                android:id="@+id/MainActivityThirdTextSubView"
                android:layout_column="2"
                android:clickable="true"
                android:visibility="visible"
                android:singleLine="false" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
