<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SimpleMortgageCalculatorActivity$PlaceholderFragment">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="24"
        android:visibility="visible"
        tools:ignore="HardcodedText" >


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/BaseMortgageAmount"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0" />

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/editTextView"
            android:layout_row="0"
            android:clickable="true"
            android:contentDescription="Price of Base Mortgage"
            android:editable="true"
            android:inputType="number"
            android:background="@color/accent_material_dark"
            android:layout_column="1" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/BaseMortgageAmountDesc"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PercentageDollarsDown"
            android:id="@+id/down"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/editTextView2"
            android:layout_row="2"
            android:clickable="true"
            android:contentDescription="Dollars Down (Optional)"
            android:editable="true"
            android:inputType="number"
            android:background="@color/accent_material_dark"
            android:layout_column="1" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/DollarsDownDesc"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ZipCode"
            android:id="@+id/zip"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/editTextView3"
            android:layout_row="4"
            android:clickable="true"
            android:contentDescription="Zip Code(Optional)"
            android:editable="true"
            android:inputType="number"
            android:background="@color/accent_material_dark"
            android:layout_column="1" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ZipCodeDesc"
            android:layout_row="5"
            android:layout_column="0" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calculate"
            android:id="@+id/calculateButton"
            android:layout_row="20"
            android:layout_column="0" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            android:layout_row="21"
            android:layout_column="0" />

        <TextView
            android:id="@+id/showResultTextView"
            android:layout_width="200dp"
            android:layout_height="500dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_row="21"
            android:layout_column="1"
            android:clickable="false"
            android:scrollbars="vertical"
            android:longClickable="false"
            android:text="Result"
            android:nestedScrollingEnabled="true" />
    </GridLayout>
    </RelativeLayout>