<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="financialcalculators.tarun.com.financalculator.activities.DemographicsActivity.DemographicsFragment">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="24"
        android:visibility="visible"
        tools:ignore="HardcodedText" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ZipCode"
            android:id="@+id/zip"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/editTextViewZip"
            android:layout_row="4"
            android:clickable="true"
            android:contentDescription="Zip Code(Optional)"
            android:editable="true"
            android:inputType="number"
            android:background="@color/accent_material_dark"
            android:layout_column="1" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ZipCodeDesc"
            android:layout_row="5"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calculate"
            android:id="@+id/calculateButton"
            android:layout_row="6"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="OR"
            android:layout_row="7"
            android:layout_column="0" />

        <Button
            android:layout_width="115dp"
            android:layout_height="85dp"
            android:text="Use Current Location Using GPS"
            android:id="@+id/GPSButton"
            android:layout_row="8"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/MortgageResult"
            android:id="@+id/resultTextView"
            android:layout_row="21"
            android:layout_column="0" />
        <TextView
            android:id="@+id/showResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_row="21"
            android:layout_column="1"
            android:clickable="false"
            android:longClickable="false"
            android:text="Result"/>
    </GridLayout>

</RelativeLayout>
